@@ -1,5 +1,5 @@
 Package: javaforce
-Version: 9.1.0
+Version: 9.2.0
 Architecture: amd64
 Maintainer: Peter Quiring <pquiring@jflinux.org>
 Installed-Size: 290
