@@ -1,7 +1,7 @@
 JavaForce SDK
 =============
 
-Version 9.1.0
+Version 9.2.0
 
 What is it?
 ===========
@@ -99,7 +99,7 @@ pquiring@gmail.com
 
 http://javaforce.sourceforge.net
 
-Version 9.1.0
+Version 9.2.0
 
-Released : June 15 2015
+Released : June 25 2015
 
